@@ -68,6 +68,15 @@ operator|.
 name|Set
 import|;
 end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashSet
+import|;
+end_import
 begin_comment
 comment|/**  * Expert: A Directory instance that switches files between  * two other Directory instances.   *<p>Files with the specified extensions are placed in the  * primary directory; others are placed in the secondary  * directory.  The provided Set must not change once passed  * to this class, and must allow multiple threads to call  * contains at once.</p>  *  * @lucene.experimental  */
 end_comment
@@ -229,78 +238,71 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
+name|Set
+argument_list|<
 name|String
-index|[]
-name|primaryFiles
+argument_list|>
+name|files
 init|=
+operator|new
+name|HashSet
+argument_list|<
+name|String
+argument_list|>
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|String
+name|f
+range|:
 name|primaryDir
 operator|.
 name|listAll
 argument_list|()
-decl_stmt|;
+control|)
+block|{
+name|files
+operator|.
+name|add
+argument_list|(
+name|f
+argument_list|)
+expr_stmt|;
+block|}
+for|for
+control|(
 name|String
-index|[]
-name|secondaryFiles
-init|=
+name|f
+range|:
 name|secondaryDir
 operator|.
 name|listAll
 argument_list|()
-decl_stmt|;
-name|String
-index|[]
+control|)
+block|{
 name|files
-init|=
+operator|.
+name|add
+argument_list|(
+name|f
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|files
+operator|.
+name|toArray
+argument_list|(
 operator|new
 name|String
 index|[
-name|primaryFiles
+name|files
 operator|.
-name|length
-operator|+
-name|secondaryFiles
-operator|.
-name|length
+name|size
+argument_list|()
 index|]
-decl_stmt|;
-name|System
-operator|.
-name|arraycopy
-argument_list|(
-name|primaryFiles
-argument_list|,
-literal|0
-argument_list|,
-name|files
-argument_list|,
-literal|0
-argument_list|,
-name|primaryFiles
-operator|.
-name|length
 argument_list|)
-expr_stmt|;
-name|System
-operator|.
-name|arraycopy
-argument_list|(
-name|secondaryFiles
-argument_list|,
-literal|0
-argument_list|,
-name|files
-argument_list|,
-name|primaryFiles
-operator|.
-name|length
-argument_list|,
-name|secondaryFiles
-operator|.
-name|length
-argument_list|)
-expr_stmt|;
-return|return
-name|files
 return|;
 block|}
 comment|/** Utility method to return a file's extension. */
